--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h2 {
 }
 
 .prompts { 
+  align-self: center;
   font-weight: bold;
   font-size: 1.75rem;
   color: rgb(255, 153, 0);
@@ -79,6 +80,7 @@ h4 {
 h5 {
   font-size: 0.75rem;
   padding-right: 2rem;
+  padding-left: 0.5rem;
   color: rgb(168, 164, 164);
   font-family:Arial, Helvetica, sans-serif;
   width: 10rem;
@@ -161,12 +163,13 @@ ul.ks-cboxtags {
   transform: translate(-50%, -50%);
 }
 .qbox {
+  position: absolute;
   border: 8px solid black;
   box-sizing: border-box;
   z-index: 2;
   opacity: 0;
   background: white;
-  min-height: 5vh;
+  min-height: 8vh;
   width: 35%;
   background: linear-gradient(
     to right bottom,
@@ -174,7 +177,6 @@ ul.ks-cboxtags {
     rgba(255, 255, 255, 0.3)
   );
   border-radius: 1.5rem;
-  padding-top: 0.5rem;
   padding-left: 0.7rem;
   top: -200%;
   transform: translate(-50%, -50%) scale(0.5);
@@ -185,8 +187,7 @@ ul.ks-cboxtags {
     flex-direction: column;
     align-items: left;
     justify-content: left;
-    padding-top: 0.6rem;
-    padding-bottom: 0.5rem;
+    padding-top: 0.4rem;
     color:rgb(0, 0, 0);
     font-size: 1rem;
   }
@@ -195,7 +196,6 @@ ul.ks-cboxtags {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 0.6rem;
     margin-bottom: 0.5rem;
     
   }
@@ -207,7 +207,6 @@ ul.ks-cboxtags {
     height: auto;
     border: 0.1rem solid #514e4e;
     color: #000000;
-    padding: 0.12rem 0.18rem; 
     font-size: 1.25rem;
     cursor: pointer; 
   }
@@ -223,7 +222,6 @@ ul.ks-cboxtags {
     height: auto;
     border: 0.25rem solid rgb(29,185,84);;
     color: #000000;
-    padding: 0.12rem 0.18rem; 
     font-size: 1rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     cursor: pointer; 
@@ -234,7 +232,7 @@ ul.ks-cboxtags {
   }
   .qbox.active {
     opacity: 1;
-    top: 30%;
+    top: 73%;
     transform: translate(0%, 0%) scale(1);
     transition: transform 300ms 
     cubic-bezier(0.18, 0.89, 0.43, 1.19);
@@ -344,6 +342,7 @@ ul.ks-cboxtags {
 
 .dropdown {
   align-items: center;
+  position: absolute;
   z-index: 2;
   opacity: 0;
   top: -200%;
@@ -352,7 +351,7 @@ ul.ks-cboxtags {
 }  
 .dropdown.active {
   opacity: 1;
-  top: 60%;
+  top: 25%;
   transform: translate(-10%, 0%) scale(1);
   transition: transform 300ms 
   cubic-bezier(0.18, 0.89, 0.43, 1.19);
@@ -367,17 +366,76 @@ ul.ks-cboxtags {
   opacity: 1;
 }
 
+.artist-detail {
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  opacity: 0;
+  top: -200%;
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
+}  
+.artist-detail.active {
+  opacity: 1;
+  top: 18%;
+  transform: translate(0%, 0%) scale(1);
+  transition: transform 300ms 
+  cubic-bezier(0.18, 0.89, 0.43, 1.19);
+}
+.artist-detail > div {
+  position: relative;
+  top: 10px;
+  opacity: 0;
+}
+.artist-detail.active > div {
+  top: 0px;
+  opacity: 1;
+}
+
+.question {
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  opacity: 0;
+  top: -200%;
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
+}  
+.question.active {
+  opacity: 1;
+  top: 67%;
+  transform: translate(0%, 0%) scale(1);
+  transition: transform 300ms 
+  cubic-bezier(0.18, 0.89, 0.43, 1.19);
+}
+.question > div {
+  position: relative;
+  top: 10px;
+  opacity: 0;
+}
+.question.active > div {
+  top: 0px;
+  opacity: 1;
+}
+
 .chooseGame {
   align-items: center;
+  position: absolute;
   z-index: 2;
   opacity: 0;
   top: -200%;
   transform: translate(-50%, -50%) scale(0.5);
   transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
 }
+.gameModes {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+}
 .chooseGame.active {
   opacity: 1;
-  top: 40%;
+  top: 68%;
   transform: translate(0%, 0%) scale(1);
   transition: transform 300ms 
   cubic-bezier(0.18, 0.89, 0.43, 1.19);
@@ -392,11 +450,12 @@ ul.ks-cboxtags {
   opacity: 1;
 }
 
-.chooseGame .hot-streak-btn {
+.hot-streak-btn {
   width: 10rem;
   height: auto;
   cursor: pointer;
   background: transparent;
+  color: white;
   border: 0.25px solid #91C9FF;
   border-radius: 0.2rem;
   outline: none;
@@ -406,10 +465,38 @@ ul.ks-cboxtags {
   margin-bottom: 1rem;
 }
 
-.chooseGame .hot-streak-btn:hover {
+.hot-streak-btn:hover {
   transition: 1s ease-in-out;
   background: #4F95DA;
+  color: red;
 }
+
+.reset-page {
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  opacity: 0;
+  top: -200%;
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
+}  
+.reset-page.active {
+  opacity: 1;
+  top: 70%;
+  transform: translate(0%, 0%) scale(1);
+  transition: transform 300ms 
+  cubic-bezier(0.18, 0.89, 0.43, 1.19);
+}
+.reset-page > div {
+  position: relative;
+  top: 10px;
+  opacity: 0;
+}
+.reset-page.active > div {
+  top: 0px;
+  opacity: 1;
+}
+
 
 .artistHeader {
   font-size: 1.5rem;
