--- a/style.css
+++ b/style.css
@@ -392,6 +392,32 @@ ul.ks-cboxtags {
   opacity: 1;
 }
 
+.album-detail {
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  opacity: 0;
+  top: -200%;
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
+}  
+.album-detail.active {
+  opacity: 1;
+  top: 18%;
+  transform: translate(0%, 0%) scale(1);
+  transition: transform 300ms 
+  cubic-bezier(0.18, 0.89, 0.43, 1.19);
+}
+.album-detail > div {
+  position: relative;
+  top: 10px;
+  opacity: 0;
+}
+.album-detail.active > div {
+  top: 0px;
+  opacity: 1;
+}
+
 .question {
   align-items: center;
   position: absolute;
@@ -467,8 +493,8 @@ ul.ks-cboxtags {
 
 .hot-streak-btn:hover {
   transition: 1s ease-in-out;
-  background: #4F95DA;
-  color: red;
+  background: rgb(255, 153, 0);
+  color: rgb(0, 0, 0);
 }
 
 .reset-page {
