--- a/style.css
+++ b/style.css
@@ -253,6 +253,69 @@ ul.ks-cboxtags {
     transition: all 300ms ease-in-out 250ms;
   }
 
+  .chooseQ-btn {
+    width: 10rem;
+    height: auto;
+    cursor: pointer;
+    background: transparent;
+    color: rgb(255, 255, 255);
+    border: 0.25px solid #9aa4ad;
+    border-radius: 0.2rem;
+    outline: none;
+    transition: 1s ease-in-out;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.15rem;
+    margin-bottom: 1rem;
+  }
+  
+  .chooseQ-btn:hover {
+    transition: 1s ease-in-out;
+    background: rgb(29,185,84);;
+    color: rgb(247, 247, 247);
+  }
+
+  .chooseQ-game {
+    position: absolute;
+    border: 8px solid black;
+    box-sizing: border-box;
+    z-index: 2;
+    opacity: 0;
+    background: white;
+    min-width: 10vh;
+    width: 75%;
+    background: linear-gradient(
+      to right bottom,
+      rgba(0, 0, 0, 0.7),
+      rgb(252, 9, 9)
+    );
+    border-radius: 1.5rem;
+    padding-left: 0.7rem;
+    top: -200%;
+    transform: translate(-50%, -50%) scale(0.5);
+    transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
+  }
+    .chooseQ-game .chooseQ-buttons {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      padding: 0.3rem;
+      margin-bottom: 0.2rem;
+      
+    }
+    .chooseQ-game.active {
+      opacity: 1;
+      top: 73%;
+      transform: translate(0%, 0%) scale(1);
+      transition: transform 300ms 
+      cubic-bezier(0.18, 0.89, 0.43, 1.19);
+    }
+    
+    .chooseQ-game.active .chooseQ-buttons {
+      transition: all 300ms ease-in-out 250ms;
+    }
+
+
 .popup {
     width: 350px;
     height: 280px;
